main: avoid stretching the body

--- a/src/main.scss
+++ b/src/main.scss
@@ -7,7 +7,6 @@
 
 html, body {
     width: 100%;
-    height: 100%;
 }
 
 body {
